template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_DSVM_adminPassword": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "virtualMachines_DSVM_name": {
            "defaultValue": "linuxds4",
            "type": "String"
        },
        "networkInterfaces_DSVMNIC_name": {
            "defaultValue": "linuxds4571",
            "type": "String"
        },
        "networkSecurityGroups_DSVM_name": {
            "defaultValue": "linuxds4-nsg",
            "type": "String"
        },
        "publicIPAddresses_DSVM_name": {
            "defaultValue": "linuxds4-ip",
            "type": "String"
        },
        "virtualNetworks_DSVMVN_name": {
            "defaultValue": "linuxds4-vnet",
            "type": "String"
        },
        "storageAccounts_dsvm_name": {
            "defaultValue": "linuxds4694",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/9fe2c50a-49af-401a-89d9-9360283d0bc6/resourceGroups/linuxds4/providers/Microsoft.Compute/virtualMachines/linuxds4'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_DSVM_name')]",
            "apiVersion": "2015-06-15",
            "location": "eastasia",
            "plan": {
                "name": "linuxdsvm",
                "product": "linux-data-science-vm",
                "publisher": "microsoft-ads"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_A3"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "microsoft-ads",
                        "offer": "linux-data-science-vm",
                        "sku": "linuxdsvm",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[parameters('virtualMachines_DSVM_name')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccounts_DSVM_name'), '.blob.core.windows.net', concat('/vhds/', parameters('virtualMachines_DSVM_name'),'201672416240.vhd'))]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_DSVM_name')]",
                    "adminUsername": "zhle",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "/home/zhle/.ssh/authorized_keys",
                                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAABJQAAAQEAg0xuRigBX3bJp/Lncfeab1ASZUW5VY2evcS8lNsxQY1WAfc1LeXS+4raz2s9yVVhVKeqJ8uLMYRbAmoaV9p9vT+iexPA8iy4kDVWYW27asQWkrIo65P9SpSZMhOM1tRxW9X+hD8Ih6oQdiODx0fJZXqoJ4E3D0W6SvX2Jp4/0f84+EMNGOQGzBPWAQCVA6A8g1ymVYp+AC2NlDRp7nVCzTFE4AuGDS/6IZ8yMezZnWrMwwW6UBaTFaL8ZthkeRvlGqiTLL7jbR5gcsqfsfZxsjpiOvx8Po/oi5VHLsf/7ltSJIi9QtOwhVI/INcGAy8l/ApKnrMNGzte/sw3RRkv7Q=="
                                }
                            ]
                        }
                    },
                    "secrets": [],
                    "adminPassword": "[parameters('virtualMachines_DSVM_adminPassword')]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_DSVMNIC_name'))]"
                        }
                    ]
                }
            },
            "resources": [],
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_DSVM_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_DSVMNIC_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9fe2c50a-49af-401a-89d9-9360283d0bc6/resourceGroups/linuxds4/providers/Microsoft.Network/networkInterfaces/linuxds4571'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_DSVMNIC_name')]",
            "apiVersion": "2016-03-30",
            "location": "eastasia",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.3.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_DSVM_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_DSVMVN_name')), '/subnets/default')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_DSVM_name'))]"
                }
            },
            "resources": [],
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_DSVM_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_DSVMVN_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_DSVM_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9fe2c50a-49af-401a-89d9-9360283d0bc6/resourceGroups/linuxds4/providers/Microsoft.Network/networkSecurityGroups/linuxds4-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_DSVM_name')]",
            "apiVersion": "2016-03-30",
            "location": "eastasia",
            "properties": {
                "securityRules": [
                    {
                        "name": "Jupyter",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9999",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "JupyterHub",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8000",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1020,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "default-allow-ssh",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1030,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9fe2c50a-49af-401a-89d9-9360283d0bc6/resourceGroups/linuxds4/providers/Microsoft.Network/publicIPAddresses/linuxds4-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_DSVM_name')]",
            "apiVersion": "2016-03-30",
            "location": "eastasia",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "linuxds4"
                }
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9fe2c50a-49af-401a-89d9-9360283d0bc6/resourceGroups/linuxds4/providers/Microsoft.Network/virtualNetworks/linuxds4-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_DSVMVN_name')]",
            "apiVersion": "2016-03-30",
            "location": "eastasia",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.3.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "properties": {
                            "addressPrefix": "10.3.0.0/24"
                        }
                    }
                ]
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/9fe2c50a-49af-401a-89d9-9360283d0bc6/resourceGroups/linuxds4/providers/Microsoft.Storage/storageAccounts/linuxds4694'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_DSVM_name')]",
            "apiVersion": "2016-01-01",
            "location": "eastasia",
            "tags": {},
            "properties": {},
            "resources": [],
            "dependsOn": []
        }
    ]
}
